hard-gists/9507070/run.log
=== Docker Run Log for 9507070 ===
Started at: Mi 29. Okt 18:27:04 CET 2025

[2025-10-29 18:27:05] START: Running container for 9507070
[2025-10-29 18:27:05] SUCCESS: Container e173c82a14683e02f5323e54377618118b387290ecc5a86a22f8ba40d2972afb started for 9507070
=== Container logs for 9507070 ===
  File "/snippet.py", line 32
    print 'Go to the following link in your browser: ' + authorize_url
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9507070 ===
[2025-10-29 18:27:07] INFO: Container e173c82a14683e02f5323e54377618118b387290ecc5a86a22f8ba40d2972afb has stopped
